--- a/requirements.txt
+++ b/requirements.txt
@@ -47,7 +47,7 @@ seaborn==0.12.2
 tensorboard==2.11.2
 tensorboard-data-server==0.7.0
 tensorboard-plugin-wit==1.8.1
-tensorflow==2.12.0rc0
+tensorflow==2.11.0
 tensorflow-estimator==2.12.0rc0
 tensorflow-intel==2.12.0rc0
 tensorflow-io-gcs-filesystem==0.31.0
