--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,7 @@ tensorboard-data-server==0.7.0
 tensorboard-plugin-wit==1.8.1
 tensorflow==2.11.0
 tensorflow-estimator==2.12.0rc0
-tensorflow-intel==2.12.0rc0
+tensorflow-intel==0.0.1
 tensorflow-io-gcs-filesystem==0.31.0
 torch==2.0.0
 torchvision==0.15.1
