--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,7 @@ requests-toolbelt==0.10.1
 roboflow==1.0.5
 tensorflow==2.12.0rc0
 tensorflow-estimator==2.12.0rc0
-tensorflow-intel==2.12.0rc0
+tensorflow-intel==0.0.1
 tensorflow-io-gcs-filesystem==0.31.0
 toml==0.10.2
 torch==2.0.0
