--- a/requirements.txt
+++ b/requirements.txt
@@ -31,5 +31,6 @@ ultralytics==8.0.88
 virtualenv==20.22.0
 wget==3.2
 yolo==0.3.1
-urllib3==1.21.1
-PyYAML==6.0
+urllib3==1.26.11
+PyYAML==5.4
+rsa=4.7
