--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,8 @@ install==1.3.5
 numpy==1.21.6
 oauthlib==3.2.2
 pipreqs==0.4.13
+playsound==1.3.0
+pyttsx3==2.90
 requests-oauthlib==1.3.1
 requests-toolbelt==0.10.1
 roboflow==1.0.5
