--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ googleapis-common-protos==1.59.0
 grpcio==1.54.0
 gunicorn==20.1.0
 install==1.3.5
+json==3.1
 numpy==1.21.6
 oauthlib==3.2.2
 pipreqs==0.4.13
