--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ gunicorn==20.1.0
 install==1.3.5
 numpy==1.21.6
 oauthlib==3.2.2
+opencv-python==4.7.0.72	
 pipreqs==0.4.13
 requests-oauthlib==1.3.1
 requests-toolbelt==0.10.1
